# actinia-metadata-plugin

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yml
actinia_metadata_plugin/: __init__.py  endpoints.py  main.py  wsgi.py
actinia_metadata_plugin/api/: common.py  files.py  metadata.py
actinia_metadata_plugin/apidocs/: files.py  metadata.py
actinia_metadata_plugin/core/: common.py  gnosParser.py  gnosReader.py  gnosWriter.py
actinia_metadata_plugin/model/: responseModels.py
actinia_metadata_plugin/resources/: cli.py  config.py  logging.py  templating.py
actinia_metadata_plugin/static/: index.html
actinia_metadata_plugin/static/stylesheets/: actinia-metadata-plugin.css
actinia_metadata_plugin/templates/: README.md
actinia_metadata_plugin/templates/geonetwork/: template_metadaten.xml
config/mount/: sample.ini
docker/: README.md  docker-compose.yml
docker/actinia-metadata-data/: sample.ini
docker/release/: Dockerfile  README.md
docker/s2i-actinia-metadata-builder/: Dockerfile
src/actinia_metadata_plugin/: __init__.py  endpoints.py  main.py
src/actinia_metadata_plugin/api/: common.py  files.py  metadata.py
src/actinia_metadata_plugin/apidocs/: files.py  metadata.py
src/actinia_metadata_plugin/core/: common.py  gnosParser.py  gnosReader.py  gnosWriter.py
src/actinia_metadata_plugin/model/: geodata.py  responseModels.py
src/actinia_metadata_plugin/resources/: config.py  logging.py  templating.py
src/actinia_metadata_plugin/templates/geonetwork/: post_records_by_tags.xml
tests/: conftest.py  test_gnos.py  test_main.py  test_resources_cli.py
